tests/baselines/reference/addMoreOverloadsToBaseSignature.errors.txt
tests/cases/compiler/addMoreOverloadsToBaseSignature.ts(5,11): error TS2430: Interface 'Bar' incorrectly extends interface 'Foo'.
  Types of property 'f' are incompatible.
    Type '(key: 文字) => 文字' is not assignable to type '() => 文字'.


==== tests/cases/compiler/addMoreOverloadsToBaseSignature.ts (1 errors) ====
    interface Foo {
        f(): string;
    }
    
    interface Bar extends Foo {
              ~~~
!!! error TS2430: Interface 'Bar' incorrectly extends interface 'Foo'.
!!! error TS2430:   Types of property 'f' are incompatible.
!!! error TS2430:     Type '(key: 文字) => 文字' is not assignable to type '() => 文字'.
        f(key: string): string;
    }
    